--- a/src/jquery.posterselect.css
+++ b/src/jquery.posterselect.css
@@ -25,6 +25,13 @@ div.posterselect div.posterselect-loading {
     background: url('graphics/loading.gif') no-repeat 0 0;
 }
 
+div.posterselect img.posterselect-preview {
+    width: 360px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
 div.posterselect div.posterselect-slider {
     position: absolute;
     width: 360px;
